[workspace]
resolver = "2"
members = [
    "examples",
    "nrf-mpsl",
    "nrf-mpsl-sys",
    "nrf-sdc",
    "nrf-sdc-sys",
]

[profile.dev]
opt-level = 1               # Use slightly better optimizations.

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

[patch.crates-io]
#embassy-executor = { path = "../embassy/embassy-executor" }
#embassy-nrf = {path = "../embassy/embassy-nrf"}
#embassy-sync = {path = "../embassy/embassy-sync"}
#embassy-futures = {path = "../embassy/embassy-futures"}
#embassy-time = {path = "../embassy/embassy-time"}
#embassy-time-driver = {path = "../embassy/embassy-time-driver"}
#embassy-embedded-hal = {path = "../embassy/embassy-embedded-hal"}

embassy-executor = {git = "https://github.com/embassy-rs/embassy.git", rev="729f96b9521d6705c1d664f4e9c636155d440519"}
embassy-nrf = {git = "https://github.com/embassy-rs/embassy.git", rev="729f96b9521d6705c1d664f4e9c636155d440519"}
embassy-sync = {git = "https://github.com/embassy-rs/embassy.git", rev="729f96b9521d6705c1d664f4e9c636155d440519"}
embassy-futures = {git = "https://github.com/embassy-rs/embassy.git", rev="729f96b9521d6705c1d664f4e9c636155d440519"}
embassy-time = {git = "https://github.com/embassy-rs/embassy.git", rev="729f96b9521d6705c1d664f4e9c636155d440519"}
embassy-time-driver = {git = "https://github.com/embassy-rs/embassy.git", rev="729f96b9521d6705c1d664f4e9c636155d440519"}
embassy-embedded-hal = {git = "https://github.com/embassy-rs/embassy.git", rev="729f96b9521d6705c1d664f4e9c636155d440519"}
#bt-hci = { path = "../bt-hci" }
