[package]
authors = ["Alex Moon <alex@moonspot.org>"]
edition = "2021"
name = "nrf-sdc-examples"
version = "0.0.0"
rust-version = "1.77"
publish = false

[[bin]]
name = "adv-simple"

[dependencies]
nrf-sdc = { version = "0.1.0", path = "../nrf-sdc", features = ["defmt", "peripheral"] }
nrf-mpsl = { version = "0.1.0", path = "../nrf-mpsl", features = ["defmt", "critical-section-impl"] }
bt-hci = { version = "0.1.0", default-features = false }

embassy-executor = { version = "0.6", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers", "executor-interrupt"] }
embassy-time = { version = "0.3", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.2.0", features = ["defmt", "time-driver-rtc1", "gpiote", "unstable-pac"] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }

defmt = "0.3"
defmt-rtt = "0.4.0"

futures = { version = "0.3", default-features = false }

cortex-m = { version = "0.7.6" }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = "2"

[features]
nrf52832 = [
  "nrf-sdc/nrf52832",
  "embassy-nrf/nrf52832",
]

nrf52840 = [
  "nrf-sdc/nrf52840",
  "embassy-nrf/nrf52840",
]
