[package]
authors = ["Alex Moon <alex@moonspot.org>"]
description = "Rust bindings to the Nordic Multiprotocol Service Layer"
edition = "2021"
license-file = "third_party/nordic/nrfxlib/LICENSE"
name = "nrf-mpsl-sys"
repository = "https://github.com/alexmoon/nrf-sdc"
version = "0.1.0"

include = [
    "./*.md",
    "build.rs",
    "src/**",
    "include/**",
    "third_party/arm/CMSIS_5/LICENSE.txt",
    "third_party/arm/CMSIS_5/CMSIS/Core/Include/**",
    "third_party/nordic/nrfx/LICENSE",
    "third_party/nordic/nrfx/mdk/*.h",
    "third_party/nordic/nrfxlib/LICENSE",
    "third_party/nordic/nrfxlib/mpsl/include/**",
    "third_party/nordic/nrfxlib/mpsl/lib/**",
]

[features]
"fem-simple-gpio" = []
"fem-nrf21540-gpio" = []
"fem-nrf21540-gpio-spi" = []

[dependencies]

[build-dependencies]
bindgen = "0.63.0"
doxygen-rs = "0.3.0"
