[package]
authors = ["Alex Moon <alex@moonspot.org>"]
description = "Rust bindings to the Nordic Multiprotocol Service Layer"
edition = "2021"
license-file = "third_party/nordic/nrfxlib/LICENSE"
name = "nrf-mpsl-sys"
repository = "https://github.com/alexmoon/nrf-sdc"
version = "0.1.1"
rust-version = "1.77"

include = [
    "./*.md",
    "build.rs",
    "src/**",
    "include/**",
    "third_party/arm/CMSIS_5/LICENSE.txt",
    "third_party/arm/CMSIS_5/CMSIS/Core/Include/**",
    "third_party/nordic/nrfx/LICENSE",
    "third_party/nordic/nrfx/mdk/*.h",
    "third_party/nordic/nrfxlib/LICENSE",
    "third_party/nordic/nrfxlib/mpsl/**",
]

[features]
fem = []
"fem-simple-gpio" = ["fem"]
"fem-nrf21540-gpio" = ["fem"]
"fem-nrf21540-gpio-spi" = ["fem"]

[package.metadata.docs.rs]
features = ["fem"]
default-target = ["thumbv7em-none-eabihf"]
targets = ["thumbv7em-none-eabi", "thumbv7em-none-eabihf", "thumbv8m.main-none-eabi"]

[dependencies]

[build-dependencies]
bindgen = "0.70.1"
doxygen-rs = "0.4.2"
