[package]
authors = ["Alex Moon <alex@moonspot.org>"]
description = "Low level rust bindings to the Nordic Multiprotocol Service Layer"
edition = "2021"
license-file = "third_party/nordic/nrfxlib/LICENSE"
name = "nrf-mpsl-sys"
repository = "https://github.com/alexmoon/nrf-sdc"
version = "0.2.1"
rust-version = "1.77"

include = [
    "./*.md",
    "build.rs",
    "src/**",
    "include/**",
    "third_party/arm/CMSIS_5/**",
    "third_party/nordic/nrfx/**",
    "third_party/nordic/nrfxlib/LICENSE",
    "third_party/nordic/nrfxlib/mpsl/**",
]

[features]
nrf52 = []
nrf53 = []
nrf54l-ns = []
nrf54l-s = []
nrf54h = []

fem = []
"fem-simple-gpio" = ["fem"]
"fem-nrf21540-gpio" = ["fem"]
"fem-nrf21540-gpio-spi" = ["fem"]

[package.metadata.docs.rs]
features = ["nrf52", "fem"]
default-target = "thumbv7em-none-eabihf"
targets = ["thumbv7em-none-eabihf"]

[dependencies]

[build-dependencies]
bindgen = "0.72.1"
doxygen-rs = "0.4.2"
