[package]
authors = ["Alex Moon <alex@moonspot.org>"]
description = "Crate name reserved for the nrf-sdc project"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "nrf-mpsl"
repository = "https://github.com/alexmoon/nrf-sdc"
version = "0.1.0"
rust-version = "1.77"

[features]
nrf52805 = ["embassy-nrf/nrf52805", "nrf52"]
nrf52810 = ["embassy-nrf/nrf52810", "nrf52"]
nrf52811 = ["embassy-nrf/nrf52811", "nrf52"]
nrf52820 = ["embassy-nrf/nrf52820", "nrf52"]
nrf52832 = ["embassy-nrf/nrf52832", "nrf52"]
nrf52833 = ["embassy-nrf/nrf52833", "nrf52"]
nrf52840 = ["embassy-nrf/nrf52840", "nrf52"]
nrf5340-net = ["embassy-nrf/nrf5340-net", "nrf53"]

nrf52 = ["nrf-mpsl-sys/nrf52"]
nrf53 = ["nrf-mpsl-sys/nrf53"]

critical-section-impl = ["critical-section/restore-state-bool"]
fem = ["nrf-mpsl-sys/fem"]
fem-simple-gpio = ["nrf-mpsl-sys/fem-simple-gpio"]
fem-nrf21540-gpio = ["nrf-mpsl-sys/fem-nrf21540-gpio"]
fem-nrf21540-gpio-spi = ["nrf-mpsl-sys/fem-nrf21540-gpio-spi"]

[dependencies]
defmt = { version = "1", optional = true }
log = { version = "0.4.11", optional = true }
critical-section = { version = "1.1", optional = true }
embedded-io = "0.6.1"
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.1"

cortex-m = "0.7.2"

nrf-mpsl-sys = { version = "0.1.0", path = "../nrf-mpsl-sys" }

embassy-nrf = { version = "0.4.1", features = ["unstable-pac"]}
embassy-sync = { version = "0.7" }
