[package]
authors = ["Alex Moon <alex@moonspot.org>"]
description = "High level rust bindings to the Nordic Multiprotocol Service Layer"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "nrf-mpsl"
repository = "https://github.com/alexmoon/nrf-sdc"
version = "0.3.0"
rust-version = "1.77"

[package.metadata.docs.rs]
features = ["nrf52840", "fem", "critical-section-impl"]
default-target = "thumbv7em-none-eabihf"
targets = ["thumbv7em-none-eabihf"]

[features]
nrf52805 = ["embassy-nrf/nrf52805", "nrf52"]
nrf52810 = ["embassy-nrf/nrf52810", "nrf52"]
nrf52811 = ["embassy-nrf/nrf52811", "nrf52"]
nrf52820 = ["embassy-nrf/nrf52820", "nrf52"]
nrf52832 = ["embassy-nrf/nrf52832", "nrf52"]
nrf52833 = ["embassy-nrf/nrf52833", "nrf52"]
nrf52840 = ["embassy-nrf/nrf52840", "nrf52"]
nrf5340-net = ["embassy-nrf/nrf5340-net", "nrf53"]
nrf54l05-app-ns = ["embassy-nrf/nrf54l05-app-ns", "nrf-mpsl-sys/nrf54l-ns", "nrf54l-ns"]
nrf54l05-app-s = ["embassy-nrf/nrf54l05-app-s", "nrf-mpsl-sys/nrf54l-s", "nrf54l-s"]
nrf54l10-app-ns = ["embassy-nrf/nrf54l10-app-ns", "nrf-mpsl-sys/nrf54l-ns", "nrf54l-ns"]
nrf54l10-app-s = ["embassy-nrf/nrf54l10-app-s", "nrf-mpsl-sys/nrf54l-s", "nrf54l-s"]
nrf54l15-app-ns = ["embassy-nrf/nrf54l15-app-ns", "nrf-mpsl-sys/nrf54l-ns", "nrf54l-ns"]
nrf54l15-app-s = ["embassy-nrf/nrf54l15-app-s", "nrf-mpsl-sys/nrf54l-s", "nrf54l-s"]


nrf52 = ["nrf-mpsl-sys/nrf52"]
nrf53 = ["nrf-mpsl-sys/nrf53"]
nrf54l-ns = ["_nrf54l"]
nrf54l-s = ["_nrf54l"]
_nrf54l = []

critical-section-impl = ["critical-section/restore-state-bool"]
fem = ["nrf-mpsl-sys/fem"]
fem-simple-gpio = ["nrf-mpsl-sys/fem-simple-gpio"]
fem-nrf21540-gpio = ["nrf-mpsl-sys/fem-nrf21540-gpio"]
fem-nrf21540-gpio-spi = ["nrf-mpsl-sys/fem-nrf21540-gpio-spi"]

[dependencies]
defmt = { version = "1", optional = true }
log = { version = "0.4.27", optional = true }
critical-section = { version = "1.2", optional = true }
embedded-io = "0.6.1"
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.1"
cfg-if = "1.0"

cortex-m = "0.7.7"

nrf-mpsl-sys = { version = "0.2", path = "../nrf-mpsl-sys" }

embassy-nrf = { version = "0.9", features = ["unstable-pac"]}
embassy-sync = { version = "0.7" }
