[package]
authors = ["Alex Moon <alex@moonspot.org>"]
description = "Low level rust bindings to the Nordic Softdevice Controller"
edition = "2021"
license-file = "third_party/nordic/nrfxlib/LICENSE"
name = "nrf-sdc-sys"
repository = "https://github.com/alexmoon/nrf-sdc"
version = "0.2.1"
rust-version = "1.77"

include = [
    "./*.md",
    "build.rs",
    "src/**",
    "include/**",
    "third_party/arm/CMSIS_5/**",
    "third_party/nordic/nrfx/**",
    "third_party/nordic/nrfxlib/LICENSE",
    "third_party/nordic/nrfxlib/mpsl/include/**",
    "third_party/nordic/nrfxlib/softdevice_controller/**",
]

[package.metadata.docs.rs]
features = ["nrf52", "central", "peripheral"]
default-target = "thumbv7em-none-eabihf"
targets = ["thumbv7em-none-eabihf"]

[features]
nrf52 = ["nrf-mpsl-sys/nrf52"]
nrf53 = ["nrf-mpsl-sys/nrf53"]
nrf54l-ns = ["nrf-mpsl-sys/nrf54l-ns"]
nrf54l-s = ["nrf-mpsl-sys/nrf54l-s"]
nrf54h = ["nrf-mpsl-sys/nrf54h"]

peripheral = []
central = []

[dependencies]
nrf-mpsl-sys = { version = "0.2.0", path = "../nrf-mpsl-sys" }

[build-dependencies]
bindgen = "0.72.0"
doxygen-rs = "0.4.2"
winnow = "0.7.12"
