[package]
authors = ["Alex Moon <alex@moonspot.org>"]
description = "Crate name reserved for the nrf-sdc project"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "nrf-sdc"
repository = "https://github.com/alexmoon/nrf-sdc"
version = "0.1.0"
rust-version="1.77"

[features]
nrf52805 = ["nrf-mpsl/nrf52805"]
nrf52810 = ["nrf-mpsl/nrf52810"]
nrf52811 = ["nrf-mpsl/nrf52811"]
nrf52820 = ["nrf-mpsl/nrf52820"]
nrf52832 = ["nrf-mpsl/nrf52832"]
nrf52833 = ["nrf-mpsl/nrf52833"]
nrf52840 = ["nrf-mpsl/nrf52840"]

peripheral = ["nrf-sdc-sys/peripheral"]
central = ["nrf-sdc-sys/central"]

defmt = ["dep:defmt", "nrf-mpsl/defmt", "bt-hci/defmt"]
log = ["dep:log", "nrf-mpsl/log", "bt-hci/log"]

[dependencies]
defmt = { version = "0.3", optional = true }
log = { version = "0.4.11", optional = true }

nrf-mpsl = { version = "0.1.0", path = "../nrf-mpsl" }
nrf-sdc-sys = { version = "0.1.0", path = "../nrf-sdc-sys" }

embassy-nrf = "0.1.0"
embassy-sync = "0.5.0"
embassy-hal-internal = "0.1.0"
critical-section = "1.1.1"
rand_core = "0.6.4"
embedded-io = "0.6.0"
embedded-io-async = "0.6.0"
bt-hci = "0.1.0"
